third_party/move/move-compiler-v2/tests/visibility-checker/resource_operator_inline.exp

Diagnostics:
warning: storage operation on `M::R` can only be done within module `0x42::M`, but `M::inline_borrow` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:13:23
   │
13 │     public inline fun inline_borrow(addr: address): &R {
   │                       ^^^^^^^^^^^^^
14 │         borrow_global<R>(addr)
   │         ---------------------- storage operation here

warning: storage operation on `M::R` can only be done within module `0x42::M`, but `M::inline_borrow_mut` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:17:23
   │
17 │     public inline fun inline_borrow_mut(addr: address): &R {
   │                       ^^^^^^^^^^^^^^^^^
18 │         borrow_global_mut<R>(addr)
   │         -------------------------- storage operation here

warning: storage operation on `M::R` can only be done within module `0x42::M`, but `M::inline_move_to` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:21:23
   │
21 │     public inline fun inline_move_to(account: &signer, r: R) {
   │                       ^^^^^^^^^^^^^^
22 │         move_to<R>(account, r)
   │         ---------------------- storage operation here

warning: storage operation on `M::R` can only be done within module `0x42::M`, but `M::inline_move_from` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:25:23
   │
25 │     public inline fun inline_move_from(addr: address): R {
   │                       ^^^^^^^^^^^^^^^^
26 │         move_from<R>(addr)
   │         ------------------ storage operation here

warning: pack on `M::R` can only be done within module `0x42::M`, but `M::inline_pack` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:29:23
   │
29 │     public inline fun inline_pack(): R {
   │                       ^^^^^^^^^^^
30 │         R {}
   │         ---- pack here

warning: unpack on `M::R` can only be done within module `0x42::M`, but `M::inline_unpack` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:33:23
   │
33 │     public inline fun inline_unpack(r: R) {
   │                       ^^^^^^^^^^^^^
34 │         let R{} = r;
   │             --- unpack here

warning: field access on `M::T` can only be done within module `0x42::M`, but `M::inline_access` could be called (and expanded) outside
   ┌─ tests/visibility-checker/resource_operator_inline.move:37:23
   │
37 │     public inline fun inline_access(t: T): R {
   │                       ^^^^^^^^^^^^^
38 │         t.r
   │         --- field access here

error: Invalid operation: storage operation on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:45:9
   │
14 │         borrow_global<R>(addr)
   │         ---------------------- storage operation here
   ·
45 │     fun test_borrow() {
   │         ^^^^^^^^^^^
46 │         M::inline_borrow(@0x42);
   │         ----------------------- from a call inlined at this callsite

error: Invalid operation: storage operation on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:49:9
   │
18 │         borrow_global_mut<R>(addr)
   │         -------------------------- storage operation here
   ·
49 │     fun test_borrow_mut() {
   │         ^^^^^^^^^^^^^^^
50 │         M::inline_borrow_mut(@0x42);
   │         --------------------------- from a call inlined at this callsite

error: Invalid operation: storage operation on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:53:9
   │
22 │         move_to<R>(account, r)
   │         ---------------------- storage operation here
   ·
53 │     fun test_move_to(account: signer) {
   │         ^^^^^^^^^^^^
54 │         let r = M::new();
55 │         M::inline_move_to(&account, r);
   │         ------------------------------ from a call inlined at this callsite

error: Invalid operation: storage operation on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:58:9
   │
26 │         move_from<R>(addr)
   │         ------------------ storage operation here
   ·
58 │     fun test_move_from(addr: address) {
   │         ^^^^^^^^^^^^^^
59 │         M::inline_move_from(addr);
   │         ------------------------- from a call inlined at this callsite

error: Invalid operation: pack on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:62:9
   │
30 │         R {}
   │         ---- pack here
   ·
62 │     fun test_inline_pack() {
   │         ^^^^^^^^^^^^^^^^
63 │         M::inline_pack();
   │         ---------------- from a call inlined at this callsite

error: Invalid operation: unpack on `M::R` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:66:9
   │
34 │         let R{} = r;
   │             --- unpack here
   ·
66 │     fun test_inline_unpack() {
   │         ^^^^^^^^^^^^^^^^^^

error: Invalid operation: field access on `M::T` can only be done within module `0x42::M`
   ┌─ tests/visibility-checker/resource_operator_inline.move:71:9
   │
38 │         t.r
   │         --- field access here
   ·
71 │     fun test_inline_access() {
   │         ^^^^^^^^^^^^^^^^^^
72 │         let t = M::new_t();
73 │         M::inline_access(t);
   │         ------------------- from a call inlined at this callsite
